# tunnel-yaw-prediction

./: .gitignore  LICENSE  README.md
relative_yaw_detection_python/: pyproject.toml
relative_yaw_detection_python/scripts/: train_nn.ipynb
relative_yaw_detection_python/src/yaw_estimation/: models.py
relative_yaw_detection_ros/: CMakeLists.txt  package.xml
relative_yaw_detection_ros/launch/: relative_yaw_prediction.launch
relative_yaw_detection_ros/nodes/: yaw_estimation_node.py  yaw_prediction_node.py
tunnel_yaw_prediction_graphics/scripts/: display_sample_creation.py
tunnel_yaw_prediction_graphics/scripts/data/: aps_avs.npy  tnodes.npy
tunnel_yaw_prediction_python/: pyproject.toml
tunnel_yaw_prediction_python/scripts/: check_network_frequency.py  plot_network_training_data.ipynb  train_nn.ipynb
tunnel_yaw_prediction_python/src/tunnel_yaw_prediction/: models.py
tunnel_yaw_prediction_ros/: CMakeLists.txt  package.xml
tunnel_yaw_prediction_ros/launch/: collect_dataset.launch  collect_dir_to_axis_dataset.launch  collect_yaw_prediction_dataset.launch  dir_to_axis_prediction_node.launch  tunnel_yaw_prediction.launch  yaw_prediction_node.launch
tunnel_yaw_prediction_ros/nodes/: dir_to_axis_datset_collection.py  dir_to_axis_network_test.py  network_test.py  network_test_node.py  test_complete_system.py  test_complete_system_oa.py  tunnel_yaw_prediction_node.py  yaw_prediction_dataset_collection_node.py
tunnel_yaw_prediction_ros/scripts/: calculate_test_results.py  plot_complete_system_error.py  plot_network_error.py
